Fixed spacing and styling on contact menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -193,12 +193,9 @@ p {
 
 
 /* styles for contact form */
-body {
-  margin: 0;
-  font-family: 'Passion One', cursive;
-}
 
 .contact-menu {
+  font-family: 'Passion One', cursive;
   position: fixed;
   left: 0;
   top: 0;
@@ -225,12 +222,13 @@ body {
 
 .content {
   display: none;
-  padding: 20px;
+  padding: 10px; /* Adjusted padding */
+  margin: 10px 0; /* Adjusted margin */
   margin-left: 220px; /* To create space for the menu */
   background-color: #f0f0f0;
-  min-height: 100vh;
+  max-height: 60vh; /* Adjusted max-height */
+  overflow-y: auto; /* Add scroll if content overflows */
 }
-
 
 /* STYLING FOR THE FOOTER */
 
